--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,7 +38,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest tests --doctest-modules --junitxml=junit/test-results.xml
+        run: pytest tests -sv --doctest-modules --junitxml=junit/test-results.xml
 
       - name: Upload pytest results
         uses: actions/upload-artifact@v4.5.0
