--- a/action.yaml
+++ b/action.yaml
@@ -32,7 +32,7 @@ inputs:
     required: false
     default: ''
   override-stack:
-    description: 'Stack ID to override normal selection logic'
+    description: 'Stack ID to explicitly target for the update, bypassing automatic stack selection.'
     required: false
     default: ''    
   metadata:
